# simulate-analog-matmul

./: LICENSE  PUBLISHING.md  README.md  pyproject.toml
AnalogSim_pro/: CHANGELOG.md  LICENSE  README.md
AnalogSim_pro/.github/workflows/: ci.yml
AnalogSim_pro/analogsim/: noise.py  ops.py
AnalogSim_pro/tests/: test_ops.py
analogsim/: __init__.py  calibration.py  cli.py  modules.py
examples/: demo_classification.py
